# quantanium-python

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  nvcc_link_expand.cmake  post_install.py  pyproject.toml
.github/workflows/: build.yml  build_all_platforms.yml  build_core.yml  ci.yml  pypi.yml  python-publish.yml  release.yml  test-macos-13-arm.yml  test-macos-13-x86.yml  test-ubuntu.yml  test-win.yml  test_building_gpu.yml  test_building_ubuntu.yml
examples/: README.md  example-ame.py  example-ev.py  example-gates.py  example-measure.py  example-noise.py  example-qstate.py  example.py  example_circuit.py  example_evolve.py  example_gpu_circuit.py  example_hamiltonian.py  example_qasm.py  test.qasm
examples/graphics/: grover_animated.ipynb
libs/: CMakeLists.txt
nix/: shell.nix
notebooks/: requirements.txt
notebooks/introduction/Basics/: Welcome.ipynb  gpu_accelerated_sim.ipynb  wstate_n3.qasm
notebooks/introduction/Noise/: Noise.ipynb
notebooks/usecases/chemistry/: H2 QPE 1.ipynb  Simple QPE.ipynb
notebooks/usecases/cybersecurity/: grover.ipynb
notebooks/usecases/teaching/: grover_animated.ipynb
notebooks/usecases/weight_optimization/: qaoa_maxcut.ipynb
src/: QuantaniumPY.cpp
src/quantanium/: Quantanium.py  __init__.py  cuda_stub.cu
src/quantanium/visualization/: __init__.py  animation.py
src/quantaniumpy/: Quantanium.py  __init__.py
tests/: test_gen_annotation.py  test_gen_operation.py  test_ifstatement.py  test_paulistring.py  test_rnz.py  test_rpauli.py  test_simple_operation.py  tests.py  tests_block.py  tests_declaration.py  tests_hamiltonian.py  tests_ifstatement.py  tests_repeat.py  tests_rnz.py  tests_simple_annotation.py
