[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantanium"
version = "0.1.12"
authors = [{ name = "QPerfect", email = "anna.leonteva@qperfect.io" }]
description = "Python wrapper for the MIMIQ Quantanium statevector engine."
readme = "README.md"
requires-python = " >= 3.9"
dependencies = ["numpy", "mimiqcircuits"]


[tool.cibuildwheel.windows.cmake]
configure-args = ["-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"]

[tool.scikit-build]
cmake.version = "==3.22.1"
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

