[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantanium"
version = "1.13.0"
authors = [{ name = "QPerfect", email = "anna.leonteva@qperfect.io" }]
description = "Python wrapper for the MIMIQ Quantanium statevector engine."
readme = "README.md"
requires-python = " >= 3.9"
dependencies = ["numpy", "mimiqcircuits", "nvidia-cuda-runtime-cu12>=12.0", "nvidia-cublas-cu12>=12.0"]


[project.optional-dependencies]
visualization = ["mimiqcircuits[visualization]"]

[tool.scikit-build]
cmake.version = ">=3.22.1"
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.scikit-build.cmake.define]
QUANTANIUMPY_WITH_CUDA = "ON"
